--- a/01-tolerations.yaml
+++ b/01-tolerations.yaml
@@ -4,14 +4,13 @@ metadata:
   name: nginx
 spec:
   containers:
-  # docker run -d --name nginx nginx
   - name: nginx
     image: nginx:stable-perl
   # nodeSelector:
   #   hardware: gpu
-  # tolerations:
-  # - key: "hardware"
-  #   operator: "Equal"
-  #   value: "gpu"
-  #   effect: "NoSchedule"
+  tolerations:
+  - key: "hardware"
+    operator: "Equal"
+    value: "gpu"
+    effect: "NoSchedule"
     
