--- a/03-affinity.yaml
+++ b/03-affinity.yaml
@@ -5,15 +5,16 @@ metadata:
 spec:
   affinity:
     nodeAffinity:
-      # hard ware
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: hardware
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 1
+        preference:
+          matchExpressions:
+          - key: another-node-label-key
             operator: In
             values:
-            - gpu
+            - another-node-label-value
   containers:
+  # docker run -d --name nginx nginx
   - name: nginx
     image: nginx:stable-perl
   # nodeSelector:
