--- a/02-affinity.yaml
+++ b/02-affinity.yaml
@@ -1,3 +1,29 @@
+# apiVersion: v1
+# kind: Pod
+# metadata:
+#   name: nginx
+# spec:
+#   affinity:
+#     nodeAffinity:
+#       # hard ware
+#       requiredDuringSchedulingIgnoredDuringExecution:
+#         nodeSelectorTerms:
+#         - matchExpressions:
+#           - key: hardware
+#             operator: In
+#             values:
+#             - gpu
+#   containers:
+#   - name: nginx
+#     image: nginx:stable-perl
+#   # nodeSelector:
+#   #   hardware: gpu
+#   tolerations:
+#   - key: "hardware"
+#     operator: "Equal"
+#     value: "gpu"
+#     effect: "NoSchedule"
+
 apiVersion: v1
 kind: Pod
 metadata:
@@ -5,22 +31,21 @@ metadata:
 spec:
   affinity:
     nodeAffinity:
-      # hard ware
+      # Hard node affinity (mandatory)
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
-        - matchExpressions:
-          - key: hardware
-            operator: In
-            values:
-            - gpu
+          - matchExpressions:
+              - key: hardware
+                operator: In
+                values:
+                  - gpu
+
   containers:
-  - name: nginx
-    image: nginx:stable-perl
-  # nodeSelector:
-  #   hardware: gpu
+    - name: nginx
+      image: nginx:stable-perl
+
   tolerations:
-  - key: "hardware"
-    operator: "Equal"
-    value: "gpu"
-    effect: "NoSchedule"
-    
+    - key: "hardware"
+      operator: "Equal"
+      value: "gpu"
+      effect: "NoSchedule"
